# drinstaller

./: .gitignore  COPYING  Dockerfile  README.md  biz.shemesh.drinstaller.desktop  com.blackmagicdesign.resolve.directory  install_wrapper  rockyrun  setup.sh
applinks/: biz.shemesh.dri.davincisetup.desktop  biz.shemesh.dri.directory  biz.shemesh.dri.menu  biz.shemesh.dri.nvidiasetup.desktop  biz.shemesh.dri.rockysetup.desktop  com.blackmagicdesign.resolve.directory
apt/: drinstaller-archive-keyring.gpg  drinstaller.list
debian/: .gitignore  README.Debian  changelog  control  copyright  drinstaller.dirs  drinstaller.install  drinstaller.links
debian/upstream/: metadata
distrorun.d/: drrocky.conf
docker/: .gitignore  Dockerfile  Makefile  pkexec.c
scripts/: actual_wrapper  dr-installer  dr-installer-postsetup  nvidia-sync  setup  term-wrapper  unprivileged_wrapper
tools/: Makefile.am  configure.ac  pkexec.c  proxy-cmd  run.sh
